--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,28 @@
-<!DOCTYPE html>
-<form action="/loginAuth" method="POST">
-    <input type="text" name="username" placeholder="username" required/>
-    </br>
-    <input type="password" name="password" placeholder="password" required/>
-    </br>
-    <input type="submit" value = Login />
+{% extends "base.html" %} {% block title %}<title>Login</title>{% endblock %} {% block content
+%}
+<form method="POST">
+  <h3 align="center">Login</h3>
+  <div class="form-group">
+    <label for="email">Email Address</label>
+    <input
+      type="email"
+      class="form-control"
+      id="email"
+      name="email"
+      placeholder="Enter email"
+    />
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input
+      type="password"
+      class="form-control"
+      id="password"
+      name="password"
+      placeholder="Enter password"
+    />
+  </div>
+  <br />
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
+{% endblock %}
