--- a/app/templates/customerRegister.html
+++ b/app/templates/customerRegister.html
@@ -11,7 +11,7 @@
     </br> 
     <input type="text" name="street" placeholder="street" required/>
     </br> 
-    <input type="text" name="building_number" placeholder="building" required/>
+    <input type="text" name="building_number" placeholder="building number" required/>
     </br> 
     <input type="text" name="city" placeholder="city" required/>
     </br> 
