Implemented canceling flights

--- a/app/templates/customerRegister.html
+++ b/app/templates/customerRegister.html
@@ -27,7 +27,7 @@
     </br> 
     <input type="password" name="password" placeholder="password" required/>
     </br> 
-    <input type="submit" value = Register />
+    <input type="submit" value = "Register" />
 </form>
 
 {% endblock %}
