--- a/app/templates/staffRegister.html
+++ b/app/templates/staffRegister.html
@@ -13,7 +13,7 @@
     </br>
     <input type="password" name="password" placeholder="password" required/>
     </br> 
-    <input type="submit" value = Register />
+    <input type="submit" value = "Register" />
 </form>
 
 {% endblock %}
