--- a/app/templates/view_flights.html
+++ b/app/templates/view_flights.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block title %}<title>Home</title>{% endblock %} {% block content
 %}
-    {% for e in flights %}
+    {% for e, url in flights %}
         <div>
-            {{e}}
+            <a href={{url}}>{{e}}</a>
         </div>
     {% endfor %}
 
