Implemented customers rating and commenting on previous flights

--- a/app/templates/flightInfo.html
+++ b/app/templates/flightInfo.html
@@ -6,6 +6,8 @@
         <input type="submit" name="go_back" value="go back"/>
         <input type="submit" name="cancel" value="cancel flight"/>
     </form>
+</br>
+    <a href={{ 'rate_flight/' ~ flight.flight_number }}> Rate Flight </a>
     
     
     {% endblock %}
