wrote track_spending function

--- a/app/templates/trackSpending.html
+++ b/app/templates/trackSpending.html
@@ -2,7 +2,7 @@
     %}
 
 <div>
-    <h1>Total Spend in the last year: {{data}}</h1>
+    <h1>Total Spend in the last year: {{data_1}}</h1>
 </div>
 
 <form method="POST" id="trackSpending">
@@ -12,5 +12,9 @@
     </br> 
     <input type="submit" value = "Track Spending" />
 </form>
+
+<div>
+    <h2>Total Spend in the selected range: {{data_2}}</h1>
+</div>
 
 {% endblock %}
