--- a/app/templates/trackSpending.html
+++ b/app/templates/trackSpending.html
@@ -1,56 +1,57 @@
 {% extends "base.html" %} {% block title %}<title>Track Spending</title>{% endblock %} {% block content
     %}
 
-<link rel="stylesheet" href="trackSpending.css">
+<head>
+    <script src="https://cdn.anychart.com/releases/8.0.0/js/anychart-base.min.js"></script>
+    <script src='trackSpending.js'></script>
+</head>
 
 <div>
     <h1>Total Spend in the last year: {{data_1}}</h1>
 </div>
 
-
-<div style="overflow:auto" >
-
-</div>
-
-<section>
-    <h2>Spending in the last 6 months</h2> 
-    <ul class="chart">
-      <li style="grid-column: span 9" + >
-        Month 1:
-        <span>9</span>
-      </li>
-  
-      <li style="grid-column: span 11">
-        Month 2:
-        <span>11</span>
-      </li>
-  
-      <li style="grid-column: span 5">
-        Month 3:
-        <span>5</span>
-      </li>
-  
-      <li style="grid-column: span 11">
-        Month 4:
-        <span>11</span>
-      </li>
-  
-      <li style="grid-column: span 6">
-        Month 5:
-        <span>6</span>
-      </li>
-  
-      <li style="grid-column: span 6">
-        Month 6:
-        <span>6</span>
-      </li>
-    </ul> 
-  </section>
-
-
-
-
-
+  <body>
+    <div id="container" style="width: 50%; height: 50%"></div>
+    <script>
+      anychart.onDocumentReady(function() {
+        // set the data
+        
+        // spending_1 = myFunc({{ month_1 | tojson }});
+        spending_1 = 1500
+        spending_2 = 1500
+        spending_3 = 1500
+        spending_4 = 1500
+        spending_5 = 24200
+        spending_6 = 1500
+        var data = {
+            header: ["Name", "Death toll"],
+            rows: [
+            //   Test to show that it auto scales for us
+            //   ["This Month", 1500],
+            //   ["Last Month", 87000],
+            //   ["Two Months Ago", 175000],
+            //   ["Three Months Ago", 10000],
+            //   ["Four Months Ago", 24200],
+            //   ["Five Months Ago", 25000],
+              ["This Month", spending_1],
+              ["Last Month", spending_2],
+              ["Two Months Ago", 175000],
+              ["Three Months Ago", 10000],
+              ["Four Months Ago", spending_4],
+              ["Five Months Ago", 25000],
+        ]};
+        // create the chart
+        var chart = anychart.bar();
+        // add the data
+        chart.data(data);
+        // set the chart title
+        chart.title("Spending in last 6 months");
+        // draw
+        chart.container("container");
+        chart.draw();
+      });
+    </script>
+  </body>
 
 <form method="POST" id="trackSpending">
     <input type="text" name="start_date_range" placeholder="Start of my range" required minlength="2"/>
