--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,8 +38,8 @@
               <a class="nav-item nav-link" id="home" href="/view_flights">View Flights</a>
               {% if session.customerOrStaff == 'staff' %}
                 <a class="nav-item nav-link" id="home" href='/staff_manage_flights'>Manage Flights</a>
-                <a class="nav-item nav-link" id="home" href='/staff_manage_new_airplane'>Manage Airplanes</a>
-                <a class="nav-item nav-link" id="home" href='/staff_manage_new_airport'>Manage Airports</a>
+                <a class="nav-item nav-link" id="home" href='/staff_manage_airplane'>Manage Airplanes</a>
+                <a class="nav-item nav-link" id="home" href='/staff_manage_airport'>Manage Airports</a>
                 <a class="nav-item nav-link" id="home" href='/staff_view_flight_ratings'>View Ratings</a>
               {% endif %}
               <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
