--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
               {% if session.customerOrStaff == 'staff' %}
                 <a class="nav-item nav-link" id="home" href='/staff_manage_flights'>Manage Flights</a>
                 <a class="nav-item nav-link" id="home" href='/staff_manage_airplane'>Manage Airplanes</a>
-                <a class="nav-item nav-link" id="home" href='/staff_manage_airport'>Manage Airports</a>
+                <a class="nav-item nav-link" id="home" href='/staff_manage_airports'>Manage Airports</a>
                 <a class="nav-item nav-link" id="home" href='/staff_view_flight_ratings'>View Ratings</a>
               {% endif %}
               <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
