Fixed searching flights by date

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,6 +36,14 @@
     {#      placeholder="Enter email"#}
         />
       </div>
+      <div>
+        <label for="departOrArrive">Departing or arriving?</label>
+        <select name="departOrArrive">
+          <option value="depart">Departing</option>
+          <option value="arrive">Arriving</option>
+        </select>
+
+      </div>
       <br />
       <button type="submit" class="btn btn-primary">Search</button>
     </form>
