Fixed minor errors

--- a/app/templates/trackSpending.html
+++ b/app/templates/trackSpending.html
@@ -23,12 +23,12 @@
         var spending_4 = "{{ month_4 }}";
         var spending_5 = "{{ month_5 }}";
         var spending_6 = "{{ month_6 }}";
-        spending_1 = 1500
-        spending_2 = 1500
-        spending_3 = 1500
-        spending_4 = 1500
-        spending_5 = 24200
-        spending_6 = 1500
+        // spending_1 = 1500
+        // spending_2 = 1500
+        // spending_3 = 1500
+        // spending_4 = 1500
+        // spending_5 = 24200
+        // spending_6 = 1500
         var data = {
             header: ["Month", "Spent"],
             rows: [
