Tracking Spending - all aspects are completed

--- a/app/templates/trackSpending.html
+++ b/app/templates/trackSpending.html
@@ -81,6 +81,7 @@
       data["rows"].push([String(month_num)+ string_month_ago, String(spendings)])
       month_num += 1
     });  
+    console.log
     // create the chart
     var chart = anychart.bar();
     // add the data
