completed staff use case (view reports) with month wise tickets in bar chart

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,8 @@
                 <a class="nav-item nav-link" id="home" href='/staff_manage_airports'>Manage Airports</a>
                 <a class="nav-item nav-link" id="home" href='/staff_view_flight_ratings'>View Ratings</a>
                 <a class="nav-item nav-link" id="home" href='/staff_view_frequent_customers'>View most frequent customer</a>
-                <a class="nav-item nav-link" id="home" href="/viewEarnedRevenue">View Revenue</a>
+                <a class="nav-item nav-link" id="home" href="/staff_view_reports">View Reports</a>
+                <a class="nav-item nav-link" id="home" href="/staff_view_earned_revenue">View Revenue</a>
               {% endif %}
               <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
