--- a/app/templates/customerFlights.html
+++ b/app/templates/customerFlights.html
@@ -7,7 +7,7 @@
 <ul>
     {% for flight in data %}
         <li>
-        <p>{{ data }}</p>
+        <p>{{ flight }}</p>
         </li>
     {% endfor %}
 </ul>
